--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -12,6 +12,6 @@ services:
     environment: 
       DB_NAME: "wpbeta"
       DB_USER: "root"
-      DB_PASSWORD: "root"
+      DB_PASSWORD: "@#itsd!2020"
       DB_HOST: "192.168.15.200"
       PORT_WP: "8888"
